2006-08-28  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_Name.py: pyflakes fixes
	* src/Editors/_EditName.py: pyflakes fixes
	* src/DisplayTabs/_BackRefModel.py: pyflakes fixes
	* src/DisplayTabs/_GalleryTab.py: pyflakes fixes

2006-08-28  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_Address.py (get_text_data_list): Typo.
	* src/Filters/Rules/Person/_HasTextMatchingSubstringOf.py (apply):
	Stop adding birth and death events.
	* configure.in: Increment version number.
	* RELEASE: version 2.1.95 is released.

2006-08-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix parsing index to correctly
	identify levels for a RESI tag

2006-08-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py (GedcomWriter.gui_setup): Add a
	dialog about the researcher information.
	* src/gramps.py (run): Remove startup dialog.
	* src/plugins/RelCalc.py: Use name display preferences throughout;
	collapse unique entries in the common ancestors list.
	* src/plugins/TestcaseGenerator.py: Bring somewhat up to date.
	* NEWS: New release name.

2006-08-26  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsLogger/_ErrorReportAssistant.py (__init__): Properly
	call Assistant.
	* src/plugins/GraphViz.py (get_event_string): Stop using cause.
	* src/Filters/Rules/Person/__init__.py (register): Add dictionary
	for private rules.
	* src/Filters/_FilterParser.py (startElement): Support parsing for
	private rules.

2006-08-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.get_name_group_mapping): convert
	group as name used as a key back to unicode (bug #389)
	* src/Editors/_EditMedia.py (EditMedia.save): don't set path on
	a save
	* src/Config/_GrampsConfigKeys.py: set toolbar-on to 1 if the gconf
	schemas were not installed properly

2006-08-25  Brian Matherly  <brian@gramps-project.org>
	* src/const.py.in: Disable thumbnailer for Windows.
